--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -7,15 +7,16 @@
 
 <body>
     <div id="app">
-        <am-error-banner :error="error"></am-error-banner>
-
         <am-excel-reader @excel-overview-loaded="onOverviewLoaded"></am-excel-reader>
 
-        <h2>Blaetter &amp; Spalten auswaehlen</h2>
+        <div v-if="excelOverview">
+            <h2>Blaetter &amp; Spalten auswaehlen</h2>
+
+            <am-activities-sheet-config :excel-overview="excelOverview"></am-activities-sheet-config>
+            <am-participants-sheet-config :excel-overview="excelOverview"></am-participants-sheet-config>
+        </div>
         
-        <am-activities-sheet-config :excel-overview="excelOverview"></am-activities-sheet-config>
-        <am-participants-sheet-config :excel-overview="excelOverview"></am-participants-sheet-config>
-        
+        <am-do-matching v-if="matchConfig && matchConfig.participantsConfig && matchConfig.activitiesConfig" :config="matchConfig"></am-do-matching>
     </div>
 
     <script src="../../node_modules/nw-dev/lib/dev.js"></script>
