--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -45,8 +45,8 @@
         </ul>
     </div>
 
-    <script src="../../node_modules/vue/dist/vue.js"></script>
-    <script>require('./index')</script>
+    <script src="../../node_modules/xlsx/dist/xlsx.full.min.js"></script>
+    <script src="../../dist/bundle.js"></script>
 </body>
 
 
