Improve styling, add translated error messages.
UI:
- Add bootstrap and make (timid as of yet) use of it
- Translate error messages thrown by matcher

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Zuweiser</title>
 </head>
 
@@ -13,7 +16,5 @@
     <script src="node_modules/xlsx/dist/xlsx.full.min.js"></script>
     <script src="dist/bundle.js"></script>
 </body>
-
-
 
 </html>
